@@ -1,3 +1,9 @@
+2012-10-17  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: GTIFGetEllipsoidInfo() - do not assume that
+	CSVFilename()'s return result is long lived.  Caused errors looking
+	up ellipsoid 7007 when uom lookup altered name buffer in GDAL context.
+
 2012-10-12  Frank Warmerdam  <warmerdam@google.com>
 
 	* configure.ac, geotiff.h: update for 1.4.1 version even though
